src/snapshots/learn_chumsky__test__if_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if true then "Hello Universe!"
else "Hello World!"
---

Some(
    (
        If {
            condition: (
                Ident("true"),
                3..7,
            ),
            then_branch: (
                String("Hello Universe!"),
                13..30,
            ),
            else_branch: Some(
                (
                    String("Hello World!"),
                    36..50,
                ),
            ),
        },
        0..50,
    ),
)

--- Errors ---
[]
---
