src/snapshots/learn_chumsky__test__literal_expressions-10.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
'\r'
---

Some(
    (
        Char('\r'),
        0..4,
    ),
)

--- Errors ---
[]
---
