src/snapshots/learn_chumsky__test__literal_expressions-11.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
 "abc" 
---

Some(
    (
        String("abc"),
        1..6,
    ),
)

--- Errors ---
[]
---
