src/snapshots/learn_chumsky__test__literal_expressions-12.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
 "Hello World!\n" 
---

Ok(
    (
        String("Hello World!\n"),
        1..17,
    ),
)
