src/snapshots/learn_chumsky__test__literal_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "823_472_340_983_273_327"

Ok(
    (
        Int(823472340983273327),
        0..23,
    ),
)
