src/snapshots/learn_chumsky__test__literal_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
1.0
---

Some(
    (
        Float(1, 0),
        0..3,
    ),
)

--- Errors ---
[]
---
