src/snapshots/learn_chumsky__test__literal_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
0.
---

Ok(
    (
        Float(0, 0),
        0..2,
    ),
)
