src/snapshots/learn_chumsky__test__literal_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
444.444
---

Ok(
    (
        Float(444, 444),
        0..7,
    ),
)
