src/snapshots/learn_chumsky__test__literal_expressions-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
9_999_999_999_999.999_999_999
---

Ok(
    (
        Float(9999999999999, 999999999),
        0..29,
    ),
)
